--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -115,31 +115,36 @@
                         <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
                 </div>
-                <a href="Cours/Ch2/Cour3.pdf">
-                    <p>ملخص+80 تمرين في الدوال الأسية</p>                   
-                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                </a>
-                <a href="Cours/Ch2/Cour4.pdf">
-                    <p>ملخص+71 تمرين في الدوال اللوغاريتمية</p>                 
-                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                </a>
-                <a href="Cours/Ch2/Cour5.pdf">
-                    <p>ملخص الدالة الأسية</p>                   
-                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                </a>
-                <a href="Cours/Ch2/Cour6.pdf">
-                    <p>ملخص الدالة اللوغاريتمية</p>                   
-                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                </a>
-                <a href="Cours/Ch2/Cour7.pdf">
-                    <p>جدول يلخص الدالة الأسية واللوغاريتمية</p>                   
-                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                </a>
-                <a href="Cours/Ch2/Cour8.pdf">
-                    <p>خريطة ذهنية للدالة الاسية واللوغاريتمية</p>                   
-                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                </a>
-
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch2/Cour3.pdf">
+                        <p>ملخص+80 تمرين في الدوال الأسية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Cour4.pdf">
+                        <p>ملخص+71 تمرين في الدوال اللوغاريتمية</p>                 
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Cour5.pdf">
+                        <p>ملخص الدالة الأسية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Cour6.pdf">
+                        <p>ملخص الدالة اللوغاريتمية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Cour7.pdf">
+                        <p>جدول يلخص الدالة الأسية واللوغاريتمية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Cour8.pdf">
+                        <p>خريطة ذهنية للدالة الاسية واللوغاريتمية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <!--<a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
                 <hr>
 
                 <div class="text_Cour">
