--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -82,32 +82,28 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="Cours/Ch1/Cour1.pdf">
                         <p>ملخص درس الاشتقاقية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
-                    <a href="">
+                    <a href="Cours/Ch1/Cour2.pdf">
                         <p>ملخص درس النهايات والاستمرارية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
-                    <a href="">
+                    <a href="Cours/Ch1/Cour3.pdf">
                         <p>قواعد الاشتقاق مرفق بالأمثلة</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
-                    <a href="">
+                    <a href="Cours/Ch1/Cour4.pdf">
                         <p>طريقة حساب النهايات باستعمال العدد المشتق</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
-                    <a href="">
+                    <a href="Cours/Ch1/Cour5.pdf">
                         <p>ملخص حول الدوال العددية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
-                    <a href="">
+                    <a href="Cours/Ch1/Cour6.pdf">
                         <p>ملخص الدوال العددية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>
-                    <a href="">
-                        <p>طريقة حساب النهايات باستعمال العدد المشتق</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
                     <!--<a href="">
